--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon ./src/app.js",
-    "test:module1": "cross-env NODE_ENV=test mocha --exit './test/module1/*.spec.js' || true",
-    "test:module2": "cross-env NODE_ENV=test mocha --exit './test/module2/*.spec.js' || true",
-    "test:module3": "cross-env NODE_ENV=test mocha --exit './test/module3/*.spec.js' || true",
-    "test:module4": "cross-env NODE_ENV=test mocha --exit './test/module4/*.spec.js' || true",
-    "test:module5": "cross-env NODE_ENV=test mocha --exit './test/module5/*.spec.js' || true",
-    "test": "cross-env NODE_ENV=test mocha --exit './test/**/*.spec.js' || true"
+    "test:module1": "cross-env NODE_ENV=test mocha --exit './test/module1/*.spec.js' || exit 0",
+    "test:module2": "cross-env NODE_ENV=test mocha --exit './test/module2/*.spec.js' || exit 0",
+    "test:module3": "cross-env NODE_ENV=test mocha --exit './test/module3/*.spec.js' || exit 0",
+    "test:module4": "cross-env NODE_ENV=test mocha --exit './test/module4/*.spec.js' || exit 0",
+    "test:module5": "cross-env NODE_ENV=test mocha --exit './test/module5/*.spec.js' || exit 0",
+    "test": "cross-env NODE_ENV=test mocha --exit './test/**/*.spec.js' || (exit 0)"
   },
   "repository": {
     "type": "git",
